--- a/frontend/src/app/pages/welcome/welcome.component.html
+++ b/frontend/src/app/pages/welcome/welcome.component.html
@@ -97,7 +97,7 @@
           <button class="welcome-create_btn"
             mat-raised-button
             color="warn">
-            Create new trip
+            {{pageDataContent.searchArea.createButton.text}}
           </button>
         </a>
       </div>
