--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -8,6 +8,7 @@ $color-black: #000000;
 $color-main: #171A33;
 $color-base-greey: #3B4461;
 $color-white-greey: #959EBD;
+$colog-tag-greey: #e0e0e0;
 $color-base6: #14172F;
 $color-base4: #333951;
 $color-base3: #333F60;
