--- a/frontend/src/app/components/app-header/app-header.component.scss
+++ b/frontend/src/app/components/app-header/app-header.component.scss
@@ -176,6 +176,24 @@ app-header {
                             color: $color-white;
                             transition: all 0.3s ease-in-out;
                             border-radius: 5px;
+                            &.with-avatar  {
+                                position: relative;
+                                padding: 10px 48px 10px 20px;
+                            }
+                            &-avatar {
+                                width: 40px;
+                                height: 40px;
+                                display: flex;
+                                align-self: center;
+                                border-radius: 50%;
+                                right: 3px;
+                                background: $color-white;
+                                position: absolute;
+                                .avatar {
+                                    position: relative;
+                                    border-radius: 50%;
+                                }
+                            }
                             &:hover {
                                 color: $color-black;
                                 opacity: 0.8;
