--- a/frontend/src/app/pages/welcome/welcome.component.html
+++ b/frontend/src/app/pages/welcome/welcome.component.html
@@ -93,7 +93,7 @@
 
       <div class="welcome-create">
         <a class="welcome-create_btn"
-          [routerLink]="locationService.joinWithLangRoutePath('/create-travel/')">
+          [routerLink]="locationService.joinWithLangRoutePath('/create-trip/')">
           <button class="welcome-create_btn"
             mat-raised-button
             color="warn">
