--- a/frontend/src/app/pages/account/account-trip-list/account-trip-list.component.html
+++ b/frontend/src/app/pages/account/account-trip-list/account-trip-list.component.html
@@ -2,10 +2,12 @@
 <!-- <account-trip-list -->
 
   <div class="content">
-
-    <account-trip-card *ngFor="let num of [1,2,3,4,5,6,7]"></account-trip-card>
-
+    <account-trip-card 
+      *ngFor="let trip of tripList$ | async"
+      [tripData]="trip"
+      [user]="user"
+    >
+    </account-trip-card>
   </div>
-
 
 <!-- </account-trip-list> -->   
