--- a/frontend/src/app/pages/create-trip/create-trip.component.scss
+++ b/frontend/src/app/pages/create-trip/create-trip.component.scss
@@ -73,6 +73,10 @@
             ::ng-deep {
                 .mat-date-range-input-container {
                     justify-content: space-between;
+                    .mat-date-range-input-start-wrapper {
+                        overflow: visible;
+                        position: static;
+                    }
                 }
                 .mat-form-field-flex {
                     background: transparent!important;
