--- a/frontend/src/app/pages/account/account-header/account-header.component.scss
+++ b/frontend/src/app/pages/account/account-header/account-header.component.scss
@@ -25,8 +25,13 @@ account-header {
             overflow: hidden;
             background: white;
             .avatar {
-                height: 140px;
-                width: 140px;
+                // height: 140px;
+                // width: 140px;
+                flex-shrink: 0;
+                display: flex;
+                object-fit: cover;
+                height: 100%;
+                width: 100%;
             }
             &::before {
                 position: absolute;
