--- a/frontend/src/app/pages/create-trip/create-trip.component.html
+++ b/frontend/src/app/pages/create-trip/create-trip.component.html
@@ -1,4 +1,4 @@
-<!-- <app-create-travel> -->
+<!-- <app-create-trip> -->
   
   <section class="auth" *ngIf="userAuth;else notAuthView">
     <div class="container">
@@ -15,28 +15,27 @@
           <mat-label class="auth-category_label">
             {{pageDataContent.mappings.okAuth.category.input.text}}
           </mat-label>
-          <mat-chip-list #chipListOfCategory>
+          <mat-chip-list #chipListOfCategory aria-label="Category selection">
             <mat-chip
               *ngFor="let category of userCategoriesChoices"
               [selectable]="true"
               [removable]="true"
               color="accent"
               (removed)="removeTripCategory(category)">
-              {{category.displayName}}
+              {{category | userSomeNameById:userTripSrv.availableUserCategories}}
               <mat-icon matChipRemove *ngIf="true">cancel</mat-icon>
             </mat-chip>
             <input
               placeholder="{{pageDataContent.mappings.okAuth.category.input.placeholder.text}}"
-              [formControl]="categoriesForm"
               #categoryInput
+              [formControl]="categoriesForm"
               [matAutocomplete]="autoCategory"
-              [matChipInputFor]="chipListOfCategory"
-              [matChipInputSeparatorKeyCodes]="separatorKeysCodes">
+              [matChipInputFor]="chipListOfCategory">
           </mat-chip-list>
           <mat-autocomplete #autoCategory="matAutocomplete"
             (optionSelected)="selectedTripCategory($event)">
             <mat-option 
-              *ngFor="let category of availableCategoryForUser"
+              *ngFor="let category of availableUserCategoriesForUser"
               [value]="category.displayName">
               {{category.displayName}}
             </mat-option>
@@ -61,7 +60,7 @@
             cdkAutosizeMaxRows="10" 
             matInput
             formControlName="descriptionInput"
-            placeholder="{{pageDataContent.mappings.okAuth.description.input.placeholder.text}}">{{'Text'}}</textarea>
+            placeholder="{{pageDataContent.mappings.okAuth.description.input.placeholder.text}}"></textarea>
         </mat-form-field>
       </div>
 
@@ -132,7 +131,7 @@
           [disabled]="shouldDisableDecrement(createTravelForm.value.peoplesCountInput)"
         >-</button>
         <mat-form-field appearance="outline" class="auth-count_number" [formGroup]="createTravelForm">
-          <mat-label>{{pageDataContent.mappings.okAuth.count.input.text}}</mat-label>
+          <!-- <mat-label>{{pageDataContent.mappings.okAuth.count.input.text}}</mat-label> -->
           <input
             type="number"
             value="1"
@@ -212,4 +211,4 @@
 
   <!-- <section class="footer"></section> -->
   
-<!-- </app-create-travel> -->
+<!-- </app-create-trip> -->
